--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta property="og:title" content="Women In Technology Mentor Matching and Career Support">
-<meta property="og:site_name" content="WomenInTech.me">
-<meta property="og:url" content="womenintech.me">
+<meta property="og:site_name" content="WomenCanCode.com">
+<meta property="og:url" content="mentoring.WomenCanCode.com">
 <meta property="og:description" content="Community to help women through mentoring to help break the glass ceiling in Technology">
 <meta property="og:image" content="https://github.com/womenintech/womenintech.github.io/blob/master/womenintech.svg">
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
