Move to wcc (#1)
* Update index.html

* Rename CNAME to CNAME.bak and update contents

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-<title>WomenInTech.me</title>
+<title>Mentoring Zone | Women Can Code</title>
   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta property="og:title" content="Women In Technology Mentor Matching and Career Support">
-<meta property="og:site_name" content="WomenInTech.me">
-<meta property="og:url" content="womenintech.me">
+<meta property="og:site_name" content="WomenCanCode.com">
+<meta property="og:url" content="mentoring.WomenCanCode.com">
 <meta property="og:description" content="Community to help women through mentoring to help break the glass ceiling in Technology">
 <meta property="og:image" content="https://github.com/womenintech/womenintech.github.io/blob/master/womenintech.svg">
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -27,7 +27,7 @@
         <nav class="navbar navbar-expand-lg navbar-light py-3" aria-label="Main navigation">
             <div class="container">
                 <a class="navbar-brand text-dark" href="index.html">
-                     <b><i class="fa fa-comments-o"></i>WomenInTech<span class="p-3 mb-2 bg-primary text-white rounded-circle">.me<span></b></a>
+                     <b><i class="fa fa-comments-o"></i>Mentoring<span class="p-3 mb-2 bg-primary text-white rounded-circle">Zone<span></b></a>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-bars fa-lg"></i>
